--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
   <body>
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
-    <main class="container mx-auto my-5 px-5 flex">
+    <main class="container mx-auto my-5 px-5 flex justify-center">
       <%= yield %>
     </main>
   </body>
