Added name to users

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -5,8 +5,13 @@
     <%= render "devise/shared/error_messages", resource: resource %>
 
     <div class="field">
+      <%= f.label :name %><br/>
+      <%= f.text_field :name, autofocus: true, autocomplete: "name",  required: true %>
+    </div>
+
+    <div class="field">
       <%= f.label :email %><br/>
-      <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+      <%= f.email_field :email, autocomplete: "email",  required: true %>
     </div>
 
     <div class="field">
@@ -15,12 +20,14 @@
         <em>(<%= @minimum_password_length %>
           characters minimum)</em>
       <% end %><br/>
-      <%= f.password_field :password, autocomplete: "new-password" %>
+      <%= f.password_field :password, autocomplete: "new-password", required: true %>
     </div>
 
     <div class="field">
       <%= f.label :password_confirmation %><br/>
-      <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
+      <%= f.password_field :password_confirmation,
+                       autocomplete: "new-password",
+                       required: true %>
     </div>
 
     <div class="actions">
