--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,6 +1,4 @@
-<%= button_to(
-  "Log Out",
-  destroy_user_session_path,
-  method: :delete,
-) %>
+<%= button_to("Log Out", destroy_user_session_path, method: :delete) %>
 <h1 class="text-6xl">iBudget</h1>
+<p>Hi,
+  <%= current_user.name %></p>
