--- a/app/views/groups/new.html.erb
+++ b/app/views/groups/new.html.erb
@@ -1,4 +1,7 @@
-<div>
-  <h1 class="font-bold text-4xl">Groups#new</h1>
-  <p>Find me in app/views/groups/new.html.erb</p>
+<div class="flex flex-col items-center">
+  <div class="">
+    <h1 class="text-6xl my-4">New group</h1>
+
+    <%= render "form", group: @group %>
+  </div>
 </div>
