--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -1,4 +1,3 @@
-<div>
-  <h1 class="font-bold text-4xl">Groups#show</h1>
-  <p>Find me in app/views/groups/show.html.erb</p>
+<div class="flex flex-col items-center">
+  <h1 class="text-6xl my-4"><%= @group.name %></h1>
 </div>
