--- a/app/views/expenses/new.html.erb
+++ b/app/views/expenses/new.html.erb
@@ -1,4 +1,4 @@
 <div>
-  <h1 class="font-bold text-4xl">Expenses#new</h1>
-  <p>Find me in app/views/expenses/new.html.erb</p>
+  <h2>New Transaction</h2>
+  <%= render "form", expense: @expense %>
 </div>
