--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -1,7 +1,7 @@
 <div class="flex flex-col items-center">
   <h1 class="text-6xl my-4">Categories</h1>
 
-  <div id="groups">
+  <div>
     <% @groups.each do |group| %>
       <div
         class="
