Added splash screen

--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -1,3 +1,5 @@
+<%= button_to("Log Out", destroy_user_session_path, method: :delete) %>
+
 <div class="flex flex-col items-center">
   <h1 class="text-6xl my-4">Categories</h1>
 
