--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,4 +1,5 @@
-<%= button_to("Log Out", destroy_user_session_path, method: :delete) %>
-<h1 class="text-6xl">iBudget</h1>
-<p>Hi,
-  <%= current_user.name %></p>
+<div class="flex flex-col items-center">
+  <h1 class="text-6xl">iBudget</h1>
+  <%= link_to "Log in", new_user_session_path, method: "get" %><br/>
+  <%= link_to "Sign up", new_user_registration_path, method: :get %><br/>
+</div>
