Added custom fonts & colors

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,5 +1,5 @@
 <div class="flex flex-col items-center">
-  <h1 class="text-6xl">iBudget</h1>
+  <h1 class="text-6xl text-primary">iBudget</h1>
   <%= link_to "Log in", new_user_session_path, method: "get" %><br/>
   <%= link_to "Sign up", new_user_registration_path, method: :get %><br/>
 </div>
