--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,8 +14,8 @@
   <body class="font-proxima-nova-regular">
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
-    <main class="container mx-auto my-5 px-5 flex justify-center">
-      <%= yield %>
-    </main>
+    <%# <main class="container mx-auto my-5 px-5 flex justify-center min-h-full"> %>
+    <%= yield %>
+    <%# </main> %>
   </body>
 </html>
