--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,19 +1,23 @@
+<%= render "shared/navbar",
+title: "Forgot Password",
+action_id: "new_user",
+action_text: "Send" %>
+
 <div class="flex flex-col">
 
-  <h2 class="text-3xl">Forgot your password?</h2>
+  <div class="border-t border-b border-gray-300 mt-4">
 
-  <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
-    <%= render "devise/shared/error_messages", resource: resource %>
+    <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
+      <%= render "devise/shared/error_messages", resource: resource %>
 
-    <div class="field">
-      <%= f.label :email %><br/>
-      <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-    </div>
-
-    <div class="actions">
-      <%= f.submit "Send me reset password instructions" %>
-    </div>
-  <% end %>
-
-  <%= render "devise/shared/links" %>
+      <div class="field">
+        <%= f.email_field :email,
+                      autofocus: true,
+                      autocomplete: "email",
+                      placeholder: "Email",
+                      required: true,
+                      class: "w-full border-none" %>
+      </div>
+    <% end %>
+  </div>
 </div>
