--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,4 +1,4 @@
-<div class="flex flex-col items-center min-h-full px-4">
+<div class="flex flex-col items-center min-h-screen px-4">
   <div class="flex items-center min-h-4/5">
     <h1 class="text-6xl text-gray-900 h-4/5 font-fertigo font-semibold">iBudget</h1>
   </div>
