--- a/app/views/expenses/_form.html.erb
+++ b/app/views/expenses/_form.html.erb
@@ -1,12 +1,12 @@
 <%= form_with(model: expense, url: group_expenses_path) do |form| %>
   <% if expense.errors.any? %>
-    <div style="color: red">
+    <div class="flex flex-col items-center mb-2" style="color: red">
       <h2><%= pluralize(expense.errors.count, "error") %>
         prohibited this expense from being saved:</h2>
 
       <ul>
         <% expense.errors.each do |error| %>
-          <li><%= error.full_message %></li>
+          <li># <%= error.full_message %></li>
         <% end %>
       </ul>
     </div>
