--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -3,34 +3,36 @@
 <div class="flex flex-col items-center">
   <div class="w-full px-4">
     <% @groups.each do |group| %>
-      <div
-        class="
-          flex
-          flex-row
-          py-4
-          items-center
-          border-solid
-          border
-          bg-white
-          border-gray-400
-          my-4
-          w-full
-          shadow-md
-        "
-      >
-        <div class="ms-2">
-          <i class="fa-solid fa-basket-shopping fa-2xl"></i>
+      <%= link_to group do %>
+        <div
+          class="
+            flex
+            flex-row
+            py-4
+            items-center
+            border-solid
+            border
+            bg-white
+            border-gray-400
+            my-4
+            w-full
+            shadow-md
+          "
+        >
+          <div class="ms-2">
+            <i class="fa-solid fa-basket-shopping fa-2xl"></i>
+          </div>
+          <div class="flex flex-col mx-4 self-start w-full">
+            <p class="font-medium text-tertiary text-2xl"><%= group.name %></p>
+            <p class="text-tertiary"><%= group.created_at.strftime("%d-%b-%Y") %>
+            </p>
+          </div>
+          <div class="me-2 mt-1 self-start font-bold">
+            <p>
+              $<%= group.total_expense %></p>
+          </div>
         </div>
-        <div class="flex flex-col mx-4 self-start w-full">
-          <%= link_to group.name, group, class: "font-medium text-tertiary text-2xl" %>
-          <p class="text-tertiary"><%= group.created_at.strftime("%d-%b-%Y") %>
-          </p>
-        </div>
-        <div class="me-2 mt-1 self-start font-bold">
-          <p>
-            $<%= group.total_expense %></p>
-        </div>
-      </div>
+      <% end %>
     <% end %>
   </div>
   <footer class="flex items-center p-4 bg-secondary absolute bottom-0 w-full">
