--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -15,7 +15,7 @@
       "Log Out",
       destroy_user_session_path,
       method: :delete,
-      class: "text-white"
+      class: "text-white -ms-8"
     ) %>
   <% end %>
 </div>
