--- a/app/views/expenses/new.html.erb
+++ b/app/views/expenses/new.html.erb
@@ -1,7 +1,7 @@
 <%= render "shared/navbar",
 title: "New Transaction",
 action_id: "new_transaction",
-action_text: "Save" %>
+action_text: "Save", page: group_path(@group.id) %>
 
 <div class="flex flex-col items-center mt-4">
   <%= render "form", expense: @expense %>
