--- a/app/views/groups/new.html.erb
+++ b/app/views/groups/new.html.erb
@@ -1,7 +1,7 @@
 <%= render "shared/navbar",
 title: "New Category",
 action_id: "new_category",
-action_text: "Add" %>
+action_text: "Add", page: groups_path %>
 
 <div class="flex flex-col items-center mt-4">
   <%= render "form", group: @group %>
