--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -1,4 +1,4 @@
-<%= render "shared/navbar", title: "Transactions" %>
+<%= render "shared/navbar", title: "Transactions", page: groups_path %>
 
 <div class="flex flex-col items-center">
   <div class="flex flex-row justify-between w-full bg-white p-4">
