--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,6 +1,10 @@
 <div class="p-3 bg-primary flex flex-row justify-between items-center">
   <% if defined? menu %>
     <i class="fa-solid fa-bars text-white"></i>
+  <% elsif defined? page %>
+    <%= link_to page, class: "text-white" do %>
+      <i class="fa-solid fa-arrow-left-long"></i>
+    <% end %>
   <% else %>
     <%= link_to :back, class: "text-white" do %>
       <i class="fa-solid fa-arrow-left-long"></i>
