--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -20,16 +20,16 @@
           "
         >
           <div class="ms-2">
-            <i class="fa-solid fa-basket-shopping fa-2xl"></i>
+            <i class="fa-solid fa-2xl <%=group.icon%>"></i>
           </div>
           <div class="flex flex-col mx-4 self-start w-full">
             <p class="font-medium text-tertiary text-2xl"><%= group.name %></p>
             <p class="text-tertiary"><%= group.created_at.strftime("%d-%b-%Y") %>
             </p>
           </div>
-          <div class="me-2 mt-1 self-start font-bold">
-            <p>
-              $<%= group.total_expense %></p>
+          <div class="me-2 mt-1 self-start">
+            <p class="font-bold">
+              <%= number_to_currency(group.total_expense) %></p>
           </div>
         </div>
       <% end %>
