--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -3,7 +3,7 @@
 <div class="flex flex-col items-center">
   <div class="flex flex-row justify-between w-full bg-white p-4">
     <p class="text-base text-tertiary">Total</p>
-    <p class="font-bold">$<%= @group.total_expense %></p>
+    <p class="font-bold"><%= number_to_currency(@group.total_expense) %></p>
   </div>
   <div class="w-full px-4 overflow-y-scroll max-h-transactions mb-5">
     <% @group.expenses.each do |expense| %>
@@ -23,7 +23,7 @@
         "
       >
         <div class="ms-2">
-          <i class="fa-solid fa-basket-shopping fa-2xl"></i>
+          <i class="fa-solid fa-2xl <%=expense.icon%>"></i>
         </div>
         <div class="flex flex-col mx-4 self-start w-full">
           <p class="font-medium text-tertiary text-2xl"><%= expense.name %></p>
@@ -32,7 +32,7 @@
         </div>
         <div class="me-2 mt-1 self-start font-bold">
           <p>
-            $<%= expense.amount %></p>
+            <%= number_to_currency(expense.amount) %></p>
         </div>
       </div>
     <% end %>
