--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,7 +1,8 @@
 <%= render "shared/navbar",
 title: "Forgot Password",
 action_id: "new_user",
-action_text: "Send" %>
+action_text: "Send",
+page: splash_screen_path %>
 
 <div class="flex flex-col">
 
