--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,7 +1,8 @@
 <%= render "shared/navbar",
 title: "Register",
 action_id: "new_user",
-action_text: "Next" %>
+action_text: "Next",
+page: splash_screen_path %>
 
 <div class="flex flex-col">
 
