--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -19,7 +19,7 @@
             shadow-md
           "
         >
-          <div class="ms-2">
+          <div class="ms-2 w-20 text-center">
             <i class="fa-solid fa-2xl <%=group.icon%>"></i>
           </div>
           <div class="flex flex-col mx-4 self-start w-full">
