--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -22,7 +22,7 @@
           shadow-md
         "
       >
-        <div class="ms-2">
+        <div class="ms-2 w-20 text-center">
           <i class="fa-solid fa-2xl <%=expense.icon%>"></i>
         </div>
         <div class="flex flex-col mx-4 self-start w-full">
