--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -23,7 +23,7 @@
             <i class="fa-solid fa-2xl <%=group.icon%>"></i>
           </div>
           <div class="flex flex-col mx-4 self-start w-full">
-            <p class="font-medium text-tertiary text-2xl"><%= group.name %></p>
+            <p class="font-medium text-tertiary text-2xl capitalize"><%= group.name %></p>
             <p class="text-tertiary"><%= group.created_at.strftime("%d-%b-%Y") %>
             </p>
           </div>
