--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -26,7 +26,7 @@
           <i class="fa-solid fa-2xl <%=expense.icon%>"></i>
         </div>
         <div class="flex flex-col mx-4 self-start w-full">
-          <p class="font-medium text-tertiary text-2xl"><%= expense.name %></p>
+          <p class="font-medium text-tertiary text-2xl capitalize"><%= expense.name %></p>
           <p class="text-tertiary"><%= expense.created_at.strftime("%d-%b-%Y") %>
           </p>
         </div>
